[package]
name = "shooter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
once_cell = "1.18"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlElement",
    "KeyboardEvent",
    "HtmlAudioElement",
    "AudioContext",
    "CssStyleDeclaration", # 追加済み
]

[dependencies.js-sys]
version = "0.3"

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[features]
default = ["console_error_panic_hook"]
